# sort-node

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  binding.gyp  docker_run.sh  package-lock.json  package.json
.github/workflows/: ci.yml  publish-npm.yml  publish-prebuild.yml
.github/workflows/scripts/: installOpenCV.bat
include/: track.h  tracker.h  utils.h
lib/: binding.js  index.js
src/: addon.cc  kalman_filter.cpp  main.cpp  sort.cpp  sort_node.cc  sort_node.h  track.cpp  tracker.cpp
test/: ADL-Rundle-6.txt  test_binding.js
